<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@id/adView">
        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:padding="25dp"
            tools:context="com.apps.devamit.jago_final.FaqFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/faq1"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/faq1" />

            <at.blogc.android.views.ExpandableTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ans1"
                android:text="@string/ans1"
                android:maxLines="2"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:animation_duration="600"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/faq2"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_marginTop="10dp"
                android:text="@string/faq2" />

            <at.blogc.android.views.ExpandableTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ans2"
                android:text="@string/ans2"
                android:maxLines="2"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:animation_duration="600"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/faq3"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_marginTop="10dp"
                android:text="@string/faq3" />

            <at.blogc.android.views.ExpandableTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ans3"
                android:text="@string/ans3"
                android:maxLines="2"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:animation_duration="600"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/faq4"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_marginTop="10dp"
                android:text="@string/faq4" />

            <at.blogc.android.views.ExpandableTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ans4"
                android:text="@string/ans4"
                android:maxLines="2"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:animation_duration="600"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/faq5"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_marginTop="10dp"
                android:text="@string/faq5" />

            <at.blogc.android.views.ExpandableTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ans5"
                android:text="@string/ans5"
                android:maxLines="2"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:animation_duration="600"
                android:layout_marginTop="5dp"
                android:ellipsize="end"/>
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        android:layout_marginBottom="5dp"
        ads:adUnitId="@string/adunit"/>
</RelativeLayout>